<resources>
    <string name="app_name">SlidingTiles</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="weclcome_text">Welcome to Game Center!\nPlease Login or Register</string>
    <string name="silding_tiles_welcome">Welcome to Sliding Tiles!</string>
    <string name="pawn_race_welcome">Welcome to Pawn Race &#9817;</string>
    <string name="settings">Settings</string>
    <string name="save_game">Save Game</string>
    <string name="new_game">New Game</string>
    <string name="load_games">Load Games</string>
    <string name="logged_in_as">Logged In As:&#160;</string>
    <string name="new_save">New Save</string>
    <string name="autosave">Autosave</string>
    <string name="save_file">Save File: %1$d</string>
    <string name="placeholder">Placeholder</string>
    <string name="gametypew">Choose Game Type:</string>
    <string name="b3">3 X 3</string>
    <string name="b4">4 X 4</string>
    <string name="b5">5 X 5</string>
    <string name="type_apply">Apply</string>
    <string name="autosave_interval">Choose Autosave Interval\n(Per Number of Moves)</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="undo_limit">Choose Undo Limit (-1 for unlimited undo)</string>
    <string name="default_val_1">1</string>
    <string name="default_val_neg_1">-1</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="scoreboard_user">User:&#160;</string>
    <string name="scoreboard_score">. Score:&#160;</string>
    <string name="game_selection">Game Selection</string>
    <string name="choose_side">Choose Side:</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="easy">Easy</string>
    <string name="choose_difficulty">Choose Difficulty:</string>
    <string name="hard">Hard</string>
    <string name="normal">Normal</string>
</resources>
